--- a/abinash/Template_8/Task_8/index.html
+++ b/abinash/Template_8/Task_8/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="margin1">
-        <div class="bg_color2 padding font_f">
-            <div class=" width margin padding">
+        <div class="bg_color2   font_f">
+            <div class=" width margin  padding">
                 <div class="float_left width_left">
                     <div class=" border bg_color padding1 ">
                         <div class="float_left width_l1">
@@ -37,19 +37,20 @@
             <div class="bg_color1 padding2"></div>
         </div>
     </div>
-    <div class="bg_color2">
+    <div class="bg_color2 ">
         <div class="margin1">
             <div class="width margin">
                 <div class="float_left width_left">
                     <div class="border4 bg_color padding3">
-                        <div class=" width margin border3 ">
-                            <div class=" width_a margin  bg_color font_s2 font_s3 linespacing font_f ">
+                        <div class=" width_a margin border3 ">
+                            <div class=" width_b margin font_s3 bg_color linespacing  ">
                                 This is where you place either you company slogan, motto, or any keyboard rich
-                                information.
+                                information.Also keep in mind that this will be true foe every page, s 
                                 This information will be the first 'content' that will be read by the search engines'so
                                 try
-                                to make it good;-) <br>
+                                to make it good;-)  
                                 Also keep in mind that this will be true foe every page, so it might be a good idea to
+                                 so it might be a good idea to
                                 change this area for each page.
                                 You might say that this section is strategically placed for that purpouse , so use it
                                 carefully.
@@ -80,37 +81,45 @@
                     </div>
                 </div>
 
-                <div class="float_left width_l2">
+                <div class="float_right width_right">
                     <div class="width margin">
                         <div class="border_5 margin_t bg_color">
                             <div class="">
                                 <h1 class="txt padding6 width margin font_f font_s7">The title for your content</h1>
-                                <div class="width_a margin linespacing font_f font_s3 font_s2 padding7">
+                                <div class="width_b margin linespacing  font_s3   padding7">
                                     You can include all your content in one of the boxes, spraed it out
                                     between many boxes, list one title fer box, or many titles per box.
                                     fel free to use this template anywhare you'd like but leave the link
+                                    back to me.list one title fer box, or many titles per box.
+                                    fel free to use this template anywhare you'd like but leave the link
                                     back to me. <br>
-                                    In order to include two titles in one of these content boxes all your have
+                                    In order to include two list one title fer box, or many titles per box.
+                                    fel free to use this template anywhare you'd like but leave the link
+                                    back to me. titles in one of these content boxes all your have
                                     to do this create another H1 tag: and folloe it with the content you wanted
                                     like so (note: if you using comments,also includes the comments div.)
                                 </div>
                                 <div class="font_c2 font margin_l">Comments (1)</div>
-                                <h1 class="txt padding8 width margin font_f font_s7">A Second H1 Tag</h1>
-                                <div class="width_a margin linespacing font_f font_s3 font_s2 padding7">
+                                <h1 class="txt padding8 width margin  font_s7">A Second H1 Tag</h1>
+                                <div class="width_b margin linespacing   font_s3   padding7">
                                     You can include all your content in one of the boxes, spraed it out
                                     between many boxes, list one title fer box, or many titles per box.
+                                    fel free to use this template anywhare you'd like but leave the link
+                                    back to me.list one title fer box, or many titles per box.
                                     fel free to use this template anywhare you'd like but leave the link
                                     back to me.
                                 </div>
                                 <div class="font_c2 font margin_l">Comments (5)</div>
-                                <h1 class="txt padding8 width margin font_f font_s7">A Third H1 Tag</h1>
-                                <div class="width_a margin linespacing font_f font_s3 font_s2 padding7">
+                                <h1 class="txt padding8 width margin  font_s7">A Third H1 Tag</h1>
+                                <div class="width_b margin linespacing   font_s3   padding8">
                                     You can include all your content in one of the boxes, spraed it out
                                     between many boxes, list one title fer box, or many titles per box.
                                     fel free to use this template anywhare you'd like but leave the link
+                                    back to me.list one title fer box, or many titles per box.
+                                    fel free to use this template anywhare you'd like but leave the link
                                     back to me.
                                 </div>
-                                <div class="padding5 font_c2 font margin_l">Comments (5)</div>
+                                
                             </div>
                         </div>
                     </div>
